Fix text-align

--- a/sass/_hero.sass
+++ b/sass/_hero.sass
@@ -18,18 +18,21 @@
             flex-direction: row
             align-items: center
             div
-                height: 80%
+                height: 70%
                 width: 100%
                 display: flex
                 flex-direction: column
                 justify-content: space-between
                 align-items: center
+                text-align: center
                 h3
                     color: #fff
                     font-size: 2.5em
+                    width: 70%
                     span
                         color: #706fd3
                 p
+                    width: 70%
                     color: #fff
                 #s1-b
                     padding: 8px 12px
